src/objects/Round__c.object
<CustomObject>
    <fields>
        <fullName>Class_Number__c</fullName>
        <formula>Text(Class__r.Class_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Class Record ID</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Rounds</relationshipLabel>
        <relationshipName>Rounds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP__c</fullName>
        <formula>Class__r.RFP__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Round_End_Date__c</fullName>
        <label>Round End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Round_Number__c</fullName>
        <label>Round Number</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Round_Start_Date__c</fullName>
        <label>Round Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Class_Identifier__c</fullName>
        <formula>Text(Class__r.Sub_Class_Identifier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Class Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transition_End_Round_Date__c</fullName>
        <label>Transition End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transition_Start_Round_Dates__c</fullName>
        <label>Transition Start Date</label>
        <type>Date</type>
    </fields>
    <label>Round</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Round Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rounds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Round_EndDate</fullName>
        <active>true</active>
        <description>Bug 3793</description>
        <errorConditionFormula>Round_End_Date__c &gt;=  Class__r.Graduation__c</errorConditionFormula>
        <errorDisplayField>Round_End_Date__c</errorDisplayField>
        <errorMessage>Round end date must be before the member graduation date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Round_End_Date</fullName>
        <active>true</active>
        <description>Round end date must be after Round start date</description>
        <errorConditionFormula>Round_End_Date__c  &lt;=  Round_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Round_End_Date__c</errorDisplayField>
        <errorMessage>Round end date must be after Round start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Round_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>Round_Start_Date__c &lt;=  Class__r.Member_Induction__c</errorConditionFormula>
        <errorDisplayField>Round_Start_Date__c</errorDisplayField>
        <errorMessage>Round start date must be after the member induction date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transition_End_Date</fullName>
        <active>true</active>
        <description>Transition end date must be after the Transition start date</description>
        <errorConditionFormula>Transition_End_Round_Date__c  &lt;  Transition_Start_Round_Dates__c</errorConditionFormula>
        <errorDisplayField>Transition_End_Round_Date__c</errorDisplayField>
        <errorMessage>Transition end date must be after the Transition start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transition_End_Date_2</fullName>
        <active>true</active>
        <errorConditionFormula>Transition_End_Round_Date__c &gt; Class__r.Graduation__c</errorConditionFormula>
        <errorDisplayField>Transition_End_Round_Date__c</errorDisplayField>
        <errorMessage>Transition End Date must be less than or equal to the Graduation Date on the parent Class Year record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transition_Start_Date</fullName>
        <active>true</active>
        <description>Transition start date must be after the round end date</description>
        <errorConditionFormula>Transition_Start_Round_Dates__c   &lt; Round_End_Date__c</errorConditionFormula>
        <errorDisplayField>Transition_Start_Round_Dates__c</errorDisplayField>
        <errorMessage>Transition start date must be after the round end date</errorMessage>
    </validationRules>
</CustomObject>